[package]
name = "pair-mock"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/pair.rs"
[dependencies.common_errors]
path = "../../common/common_errors"

[dependencies.multiversx-sc]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.itertools]
version = "0.10.1"
default-features = false
[dev-dependencies.multiversx-sc-scenario]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
