[package]
name = "router"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/contract.rs"
[dependencies.token_send]
path = "../../common/modules/token_send"

[dependencies.pausable]
path = "../../common/modules/pausable"

[dependencies.multiversx-sc]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.pair]
path = "../pair"

[dependencies.locking_module]
path = "../../common/modules/locking_module"

[dependencies.simple-lock]
path = "../../locked-asset/simple-lock"
[dev-dependencies.multiversx-sc-scenario]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
