[package]
name = "energy-factory-mock"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
[dependencies.energy-query]
path = "../common-modules/energy-query"

[dependencies.multiversx-sc]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
features = ["esdt-token-payment-legacy-decode"]

[dev-dependencies.multiversx-sc-scenario]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
