[package]
name = "governance-v2"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
[dependencies.energy-query]
path = "../common-modules/energy-query"

[dependencies.multiversx-sc]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.permissions_module]
path = "../../common/modules/permissions_module"

[dependencies.fees-collector]
path = "../fees-collector"

[dependencies.weekly-rewards-splitting]
path = "../common-modules/weekly-rewards-splitting"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"

[dev-dependencies.energy-factory-mock]
path = "../energy-factory-mock"
