[package]
edition = "2021"
name = "distribution"
publish = false
version = "0.0.0"

[lib]
path = "src/lib.rs"
[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.factory]
path = "../factory"

[dependencies.multiversx-sc]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
features = ["esdt-token-payment-legacy-decode"]
[dev-dependencies.multiversx-sc-scenario]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
