[package]
name = "lkmex-transfer"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.utils]
path = "../../common/modules/utils"

[dependencies.legacy_token_decode_module]
path = "../../common/modules/legacy_token_decode_module"

[dependencies.permissions_module]
path = "../../common/modules/permissions_module"

[dependencies.simple-lock]
path = "../simple-lock"

[dependencies.energy-factory]
path = "../energy-factory"

[dependencies.energy-query]
path = "../../energy-integration/common-modules/energy-query"

[dependencies.multiversx-sc]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
features = ["esdt-token-payment-legacy-decode"]

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"

[dev-dependencies.multiversx-sc-modules]
version = "=0.43.3"
