[package]
name = "legacy_token_decode_module"
version = "0.0.0"
authors = ["Sorin Petreasca <sorin.petreasca@multiversx.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
[dependencies.multiversx-sc]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.common_structs]
path = "../../common_structs"

[dependencies.utils]
path = "../utils"
