[package]
name = "locking_module"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@multiversx.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"
[dependencies.multiversx-sc]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.simple-lock]
path = "../../../locked-asset/simple-lock"

[dependencies.energy-factory]
path = "../../../locked-asset/energy-factory"
