[package]
name = "permissions_module"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@multiversx.com>", "Claudiu-Marcel Bruda <claudiu.bruda@multiversx.com>"]
edition = "2021"

[lib]
path = "src/permissions_module.rs"

[dependencies]
bitflags = "1.3.2"

[dependencies.common_errors]
path = "../../common_errors"

[dependencies.multiversx-sc]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
features = ["esdt-token-payment-legacy-decode"]
