[package]
name = "sc_whitelist_module"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"

[lib]
path = "src/sc_whitelist_module.rs"
[dependencies.common_errors]
path = "../../common_errors"

[dependencies.multiversx-sc]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
features = ["esdt-token-payment-legacy-decode"]
