[package]
name = "price-discovery-meta"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["Dorin Iancu <dorin.iancu@multiversx.com>"]
[dependencies.price-discovery]
path = ".."

[dependencies.multiversx-sc-meta]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
