[package]
name = "weekly-rewards-splitting"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@multiversx.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"
[dependencies.multiversx-sc]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.energy-query]
path = "../energy-query"

[dependencies.week-timekeeping]
path = "../week-timekeeping"

[dependencies.common-types]
path = "../../common-types"

[dependencies.unwrappable]
path = "../../../common/traits/unwrappable"

[dependencies.math]
path = "../../../common/modules/math"
