[package]
name = "metabonding-staking-meta"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["MultiversX <contact@multiversx.com>"]

[dev-dependencies]
[dependencies.metabonding-staking]
path = ".."

[dependencies.multiversx-sc-meta]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
