[package]
name = "distribution-abi"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false
[dependencies.distribution]
path = ".."

[dependencies.multiversx-sc-meta]
git = "ssh://git@github.com/gfusee/mx-sdk-rs.git"
branch = "feature/typed_sc_deploy_as_mut"
